--- a/seat_yourself/static/css/base.css
+++ b/seat_yourself/static/css/base.css
@@ -10,6 +10,12 @@ body {
   font-family: 'Roboto', sans-serif;
 }
 
+.restaurant_img {
+  width: 100%;
+  max-width: 600px;
+  border-radius: 5px;
+}
+
 a {
   text-decoration-line: none;
 }
